# qa

./: .env  .gitignore  AGENTS.md  README.md  project_guide.md  pyproject.toml  requirements.txt
part1/: README.md  bugs.md
part2/: README.md  __init__.py  bootstrap_google_session.py  conftest.py
part2/pages/: __init__.py  config.py  dashboard_page.py  editor_page.py  login_page.py
part2/tests/: test_editor.py  test_login.py
part3/: README.md  __init__.py  ci-policy.md  llm_judge.py  sample-output.md  validate.py
